Walker2D system is added. without contact model

--- a/Simulator/RBDL_simulator/Systems/Walker2D/CMakeLists.txt
+++ b/Simulator/RBDL_simulator/Systems/Walker2D/CMakeLists.txt
@@ -1,8 +1,8 @@
 FILE(GLOB_RECURSE header *.hpp)
 file(GLOB_RECURSE source *.cpp)
-add_library (Openchain3DoF_Sim_System ${header} ${source} )
+add_library (${CTRL_SYS}_Sim_System ${header} ${source} )
 
-target_link_libraries (Openchain3DoF_Sim_System
+target_link_libraries (${CTRL_SYS}_Sim_System
   SJutils
   SJrbdl
   RBDL_SimManager
