2D walker with LCP based Z-contact modeled

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,8 +29,8 @@ add_definitions(-O3)
 # SET (CTRL_SYS "DracoP1")
 # SET (CTRL_SYS "DracoP1Rot")
 # SET (CTRL_SYS "Openchain3DoF")
-SET (CTRL_SYS "Openchain2DoF")
-# SET (CTRL_SYS "Walker2D")
+# SET (CTRL_SYS "Openchain2DoF")
+SET (CTRL_SYS "Walker2D")
 
 include_directories ("${PROJECT_SOURCE_DIR}/ControlSystem/${CTRL_SYS}")
 
