--- a/Simulator/RBDL_simulator/Systems/Walker2D/CMakeLists.txt
+++ b/Simulator/RBDL_simulator/Systems/Walker2D/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library (${CTRL_SYS}_Sim_System ${header} ${source} )
 target_link_libraries (${CTRL_SYS}_Sim_System
   SJutils
   SJrbdl
+  SJMobyLCP
   RBDL_SimManager
   ${CTRL_SYS}_Controller
 )
