--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,8 +38,8 @@ include_directories ("${PROJECT_SOURCE_DIR}/ControlSystem/${CTRL_SYS}")
 #------------------------------------------------------------------------
 #    Directory Selection
 #------------------------------------------------------------------------
-# add_subdirectory (Simulator/srSimulator)
-add_subdirectory (Simulator/RBDL_simulator)
+add_subdirectory (Simulator/srSimulator)
+# add_subdirectory (Simulator/RBDL_simulator)
 add_subdirectory (Utils)
 add_subdirectory (Filter)
 add_subdirectory (ExternalSource)
