--- a/ControlSystem/Valkyrie/Valkyrie_Controller/CMakeLists.txt
+++ b/ControlSystem/Valkyrie/Valkyrie_Controller/CMakeLists.txt
@@ -1,6 +1,9 @@
-FILE(GLOB_RECURSE headers *.h)
+FILE(GLOB_RECURSE headers *.hpp)
 FILE(GLOB_RECURSE sources *.cpp)
+include_directories ("${PROJECT_SOURCE_DIR}/ControlSystem/${CTRL_SYS}/${CTRL_SYS}_Controller")
 
-add_library (Valkyrie_Controller SHARED ${headers} ${sources})
+add_library (${CTRL_SYS}_Controller SHARED ${headers} ${sources})
+target_link_libraries (${CTRL_SYS}_Controller SJutils SJfilters SJrbdl)
+target_link_libraries (${CTRL_SYS}_Controller ${CTRL_SYS}_model)
+target_link_libraries (${CTRL_SYS}_Controller WBDC)
 
-target_link_libraries (Valkyrie_Controller SJutils SJfilters SJrbdl Valkyrie_model WBLC SJplanner)
