--- a/ControlSystem/BLANK_Copy_THIS_and_change_NAME/Robot_Model/CMakeLists.txt
+++ b/ControlSystem/BLANK_Copy_THIS_and_change_NAME/Robot_Model/CMakeLists.txt
@@ -1,7 +1,7 @@
-FILE(GLOB_RECURSE headers *.h)
+FILE(GLOB_RECURSE headers *.hpp)
 FILE(GLOB_RECURSE sources *.cpp)
 
-add_library(Valkyrie_model SHARED ${sources} ${headers})
+add_library(${CTRL_SYS}_model SHARED ${sources} ${headers})
 
-target_link_libraries(Valkyrie_model SJutils)
-target_link_libraries(Valkyrie_model SJrbdl)
+target_link_libraries(${CTRL_SYS}_model SJutils SJrbdl)
+
