--- a/ControlSystem/BLANK_Copy_THIS_and_change_NAME/CMakeLists.txt
+++ b/ControlSystem/BLANK_Copy_THIS_and_change_NAME/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_subdirectory(Valkyrie_Controller)
-add_subdirectory(Valkyrie_Model)
+add_subdirectory(${CTRL_SYS}_Controller)
+add_subdirectory(Robot_Model)
