mercury fixed in the air, joint position control

--- a/Simulator/srSimulator/OpenGLRecorder/CMakeLists.txt
+++ b/Simulator/srSimulator/OpenGLRecorder/CMakeLists.txt
@@ -18,7 +18,7 @@ if(WIN32)
 else()
   set(OpenCV_DIR "/usr/lib/opencv")
 endif()
-# find_package(OpenCV) # REQUIRED COMPONENTS core imgproc)
+find_package(OpenCV REQUIRED COMPONENTS core imgproc)
 find_package(OpenCV REQUIRED COMPONENTS core imgproc highgui)
 include_directories(${OpenCV_INCLUDE_DIRS})
 target_link_libraries(opengl_recorder ${OPENGL_LIBRARIES})
