--- a/ControlSystem/Mercury/MercuryTestConfig/step_test.yaml
+++ b/ControlSystem/Mercury/MercuryTestConfig/step_test.yaml
@@ -1,5 +1,12 @@
+# Torque limt (Nm)
+torque_max: [100, 100, 100, 100, 100, 100]
+torque_min: [-100, -100, -100, -100, -100, -100]
+
+# Timing Parameters (sec)
+com_lifting_time: 1.0
 swing_time: 0.3
-transition_time: 0.05
-double_stand_time: 0.05
-initial_jpos: [0.0, -0.5, 0.9, 0.0, -0.5, 0.9]
+st_transition_time: 100.05
+end_transition_time: 0.05
+stance_time: 0.03
+
 planner_name: velocity_reversal_lipm
