--- a/ControlSystem/Mercury/MercuryTestConfig/right_walking_swing.yaml
+++ b/ControlSystem/Mercury/MercuryTestConfig/right_walking_swing.yaml
@@ -1,6 +1,7 @@
 planner_name: velocity_reversal_lipm
 swing_height: 0.16
 default_target_foot_location: [0.0, -0.18, 0.0]
+planning_frequency: 2
 
 ## Feedback Gain
 # CoMx, CoMy, CoMz, Rx, Ry, Rz, Foot_x, Foot_y, Foot_z
