--- a/ControlSystem/Mercury/MercuryTestConfig/right_step_swing.yaml
+++ b/ControlSystem/Mercury/MercuryTestConfig/right_step_swing.yaml
@@ -8,3 +8,7 @@ traj_type: B_Spline
 Kp: [0.0, 0.0, 200.0, 300., 300., 0., 300, 300, 300]
 Kd: [0.0, 0.0, 20.0, 20.0, 20.0, 0., 30, 30, 30]
 
+# Torque limt (Nm)
+torque_max: [50, 50, 60, 100, 100, 130]
+torque_min: [-50, -50, -60, -100, -100, -130]
+
