--- a/ControlSystem/Mercury/MercuryTestConfig/right_walking_swing.yaml
+++ b/ControlSystem/Mercury/MercuryTestConfig/right_walking_swing.yaml
@@ -7,3 +7,7 @@ planning_frequency: 2
 # CoMx, CoMy, CoMz, Rx, Ry, Rz, Foot_x, Foot_y, Foot_z
 Kp: [0.0, 0.0, 200.0, 200., 200., 0., 200, 200, 200]
 Kd: [0.0, 0.0, 20.0, 20.0, 20.0, 0., 20, 20, 20]
+
+# Torque limt (Nm)
+torque_max: [50, 50, 60, 100, 100, 130]
+torque_min: [-50, -50, -60, -100, -100, -130]
