--- a/Planner/PIPM_FootPlacementPlanner/CMakeLists.txt
+++ b/Planner/PIPM_FootPlacementPlanner/CMakeLists.txt
@@ -3,4 +3,4 @@ FILE(GLOB_RECURSE cppheaders *.hpp)
 FILE(GLOB_RECURSE sources *.cpp)
 add_library(PIPM_planner SHARED ${sources} ${headers} ${cppheaders})
 
-target_link_libraries(PIPM_planner SJutils)
+target_link_libraries(PIPM_planner SJutils SJparam_handler)
