--- a/ControlSystem/Mercury/MercuryTestConfig/PLANNER_velocity_reversal.yaml
+++ b/ControlSystem/Mercury/MercuryTestConfig/PLANNER_velocity_reversal.yaml
@@ -1,8 +1,8 @@
-step_length_limit: 0.15
-com_velocity_limit: [0.05, 0.15]
+x_step_length_limit: [-0.2, 0.25]
+y_step_length_limit: [0.04, 0.35]
 
-t_prime_x: 0.15
-t_prime_y: 0.15
+com_velocity_limit: [0.01, 0.22]
 
-kappa_x: 0.1
-kappa_y: 0.1
+t_prime: [0.21, 0.21]
+kappa: [-0.2, -0.3]
+
