added goldfarb library. solver works

--- a/ControlSystem/Walker2D/Walker2D_Controller/CMakeLists.txt
+++ b/ControlSystem/Walker2D/Walker2D_Controller/CMakeLists.txt
@@ -3,4 +3,4 @@ FILE(GLOB_RECURSE sources *.cpp)
 
 add_library (${CTRL_SYS}_Controller SHARED ${headers} ${sources})
 
-target_link_libraries (${CTRL_SYS}_Controller SJutils SJfilters SJrbdl ${CTRL_SYS}_model)
+target_link_libraries (${CTRL_SYS}_Controller SJutils SJfilters SJrbdl SJGoldfarb ${CTRL_SYS}_model)
