from control pc

--- a/ControlSystem/Mercury/CMakeLists.txt
+++ b/ControlSystem/Mercury/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_subdirectory(${CTRL_SYS}_Controller)
 add_subdirectory(Robot_Model)
+install(FILES Mercury_Definition.h DESTINATION "${INSTALL_INCLUDE_DIR}/")
