--- a/ControlSystem/Mercury/Mercury_Controller/CMakeLists.txt
+++ b/ControlSystem/Mercury/Mercury_Controller/CMakeLists.txt
@@ -8,3 +8,6 @@ target_link_libraries (${CTRL_SYS}_Controller ${CTRL_SYS}_model)
 target_link_libraries (${CTRL_SYS}_Controller WBDC)
 
 target_link_libraries (${CTRL_SYS}_Controller SJparam_handler PIPM_planner)
+
+install(TARGETS ${CTRL_SYS}_Controller DESTINATION "${INSTALL_LIB_DIR}")
+install(FILES ${headers} DESTINATION "${INSTALL_INCLUDE_DIR}/Mercury_Controller")
