--- a/ExternalSource/urdf/CMakeLists.txt
+++ b/ExternalSource/urdf/CMakeLists.txt
@@ -1,3 +1,6 @@
 FILE(GLOB_RECURSE headers *.h)
 FILE(GLOB_RECURSE sources *.cpp)
 add_library(SJurdf SHARED ${sources} ${headers})
+
+install(TARGETS SJurdf DESTINATION "${INSTALL_LIB_DIR}")
+install(FILES ${headers} DESTINATION "${INSTALL_INCLUDE_DIR}/ExternalSource/urdf")
