--- a/Optimizer/Goldfarb/CMakeLists.txt
+++ b/Optimizer/Goldfarb/CMakeLists.txt
@@ -1,3 +1,6 @@
 FILE(GLOB_RECURSE headers *.hh)
 FILE(GLOB_RECURSE sources *.cc)
 add_library (SJGoldfarb SHARED ${headers} ${sources})
+
+install(TARGETS SJGoldfarb DESTINATION "${INSTALL_LIB_DIR}")
+install(FILES ${headers} DESTINATION "${INSTALL_INCLUDE_DIR}/Optimizer/Goldfarb")
