--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,10 +35,10 @@ add_definitions(-O3)
 # SET (CTRL_SYS "NAO")
 # SET (CTRL_SYS "DracoP1")
 # SET (CTRL_SYS "DracoP1Rot")
-# SET (CTRL_SYS "Mercury")
+SET (CTRL_SYS "Mercury")
 # SET (CTRL_SYS "Openchain3DoF")
 # SET (CTRL_SYS "Openchain2DoF")
-SET (CTRL_SYS "Walker2D")
+# SET (CTRL_SYS "Walker2D")
 
 include_directories ("${PROJECT_SOURCE_DIR}/ControlSystem/${CTRL_SYS}")
 
@@ -46,8 +46,8 @@ include_directories ("${PROJECT_SOURCE_DIR}/ControlSystem/${CTRL_SYS}")
 #     Simulator Selection
 #------------------------------------------------------------------------
 SET (RECORD_SIMULATION 0)
-# add_subdirectory (Simulator/srSimulator)
-add_subdirectory (Simulator/RBDL_simulator)
+add_subdirectory (Simulator/srSimulator)
+# add_subdirectory (Simulator/RBDL_simulator)
 
 #------------------------------------------------------------------------
 #    Directory Selection
@@ -60,7 +60,7 @@ add_subdirectory (Optimizer)
 add_subdirectory (WBC/WBDC)
 add_subdirectory (ControlSystem/${CTRL_SYS})
 # add_subdirectory (MachineLearning_Package)
-# add_subdirectory (Planner)
+add_subdirectory (Planner)
 add_subdirectory(Tests) # For unit testing with googletest
 
 #------------------------------------------------------------------------
