--- a/ControlSystem/Mercury/Robot_Model/CMakeLists.txt
+++ b/ControlSystem/Mercury/Robot_Model/CMakeLists.txt
@@ -1,6 +1,9 @@
-FILE(GLOB_RECURSE headers *.h)
+FILE(GLOB_RECURSE headers *.hpp)
 FILE(GLOB_RECURSE sources *.cpp)
 
 add_library(${CTRL_SYS}_model SHARED ${sources} ${headers})
 
 target_link_libraries(${CTRL_SYS}_model SJutils SJrbdl)
+
+install(TARGETS ${CTRL_SYS}_model DESTINATION "${INSTALL_LIB_DIR}")
+install(FILES ${headers} DESTINATION "${INSTALL_INCLUDE_DIR}/Robot_Model")
