--- a/Addition/Data_Manager/CMakeLists.txt
+++ b/Addition/Data_Manager/CMakeLists.txt
@@ -21,6 +21,8 @@ include_directories ("${PROJECT_SOURCE_DIR}/../../utils")
 include_directories ("${PROJECT_SOURCE_DIR}/../../ExternalSource")
 include_directories ("${PROJECT_SOURCE_DIR}/../../")
 
+# system dependent (TODO)
+include_directories ("${PROJECT_SOURCE_DIR}/../../ControlSystem/Mercury/")
 
 set (headers 
 DataSave.h
